# 2ten_streaming_partner

./: .gitignore  AGENTS.md  pyproject.toml
config/: local.example.toml
docs/: architecture.md  requirements.md
overlay/: index.html
src/aituber_partner/: __init__.py  app.py  config.py  models.py  orchestrator.py
src/aituber_partner/inputs/: __init__.py  base.py  fake.py  idle_topic.py  stt.py  youtube_chat.py
src/aituber_partner/llm/: __init__.py  client.py  output_guard.py  prompts.py  router.py  safety.py  selection.py  text.py
src/aituber_partner/overlay/: __init__.py  server.py
src/aituber_partner/speech/: __init__.py  aivis.py  player.py
src/aituber_partner/storage/: __init__.py  sqlite_store.py
tests/: test_app.py  test_config.py  test_idle_topic_input.py  test_llm_client.py  test_llm_router.py  test_llm_safety.py  test_llm_selection.py  test_llm_text.py  test_models.py  test_orchestrator.py  test_output_guard.py  test_overlay_server.py  test_sqlite_store.py  test_stt_input.py  test_youtube_chat_input.py
