[project]
name = "aituber-partner"
version = "0.1.0"
description = "Local Phase 1 AITuber streaming partner for YouTube Live."
readme = "docs/requirements.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
aituber-partner = "aituber_partner.app:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
